# ToDo

./: .coverage  .env.example  .env.exp  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  fastui.py  main.py  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  test.db
app/: main.py
app/auth/: auth_backend.py  jwt_handler.py
app/db/: database.py  models.py  schemas.py
app/routers/: auth.py  crud.py  crud_helpers.py  endpoint.py  extra.py  handle_exception.py  sharing_helpers.py  task_file.py  task_sharing.py  todos.py
app/routes/: auth.py  todos.py
frontend/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
frontend/context/: AuthContext.tsx
frontend/services/: apiService.ts
src/: constants.py  endpoints.py  exceptions.py  main.py
src/auth/: models.py  schemas.py  service.py  utils.py  views.py
src/common/: constants.py  enums.py  models.py  schemas.py  utils.py
src/core/: config.py  database.py  decorators.py  exception.py  exception_handlers.py  exceptions.py  excp.py  types.py
src/db/: _test.py  database.py  models.py  schemas.py
src/routers/: crud.py  endpoint.py  extra.py  (+1 more)
tests/: base_test.py  conftest.py  database.py  requirements-test.txt  rules.md  test_api.py  test_async_operations.py  test_auth.py  test_coverage.py  test_database_operations.py   test_edge_cases.py  test_helpers.py  test_performance.py  test_runner.sh  test_security.py  test_sharing.py  test_tasks.py
tests_dev/: Makefile  conftest.py  conftest_additional.py  factories.py  run_tests.sh  utils.py
(+80 files in other folders)
